<resources>
    <string name="app_name">Fuel Balance</string>

    <string name="permission_rational_dialog_title">Permissions Needed</string>
    <string name="permission_rational_dialog_message">To automatically record your trips and calculate fuel usage, you need to give Activity Recognition and Location permissions to Fuel Balance App. Additionally, in settings, you need to allow the app to access the location all the time</string>
    <string name="permission_rational_dialog_positive_button_text">Request a permission</string>
    <string name="permission_rational_dialog_negative_button_text">No thanks</string>

    <string name="settings_dialog_title">Permissions Needed</string>
    <string name="settings_dialog_message">To automatically record your trips and calculate fuel usage, you need to give Activity Recognition and Location permissions to Fuel Balance App. Additionally, in settings, you need to allow the app to access the location all the time</string>
    <string name="settings_dialog_positive_button_text">Go to settings</string>
    <string name="settings_dialog_negative_button_text">No thanks</string>

    <string name="transition_update_request_success">Transition updates requested</string>
    <string name="transition_update_request_failed">Requesting transition updates failed</string>
    <string name="transition_update_remove_success">Transition updates removed</string>
    <string name="transition_update_remove_failed">Removing transition updates failed</string>

    <string name="activity_update_request_success">Activity updates requested</string>
    <string name="activity_update_request_failed">Requesting activity updates failed</string>
    <string name="activity_update_remove_success">Activity updates removed</string>
    <string name="activity_update_remove_failed">Removing activity updates failed</string>

    <string name="trips_recording">Trips recording</string>
    <string name="enable_trips_recording">Enable trips recording</string>
    <string name="update_in_progress">Update of status in progress</string>
    <string name="status">Status</string>
    <string name="balance">Balance</string>
    <string name="set_fuel_consumption">Set fuel consumption</string>
    <string name="trips_history">View trips history</string>
    <string name="add_fuel_purchase">Add fuel purchase</string>
    <string name="fuel_consumption">Car fuel consumption (l/100km)</string>
    <string name="type_here">Type here...</string>
    <string name="save_car_fuel_consumption">Save</string>
    <string name="add_fuel_purchase_with_current_date">Add fuel purchase with current date (l)</string>
    <string name="add_trip_with_current_date">Add trip with current date (km)</string>
    <string name="add_fuel_purchase_to_the_list">Add</string>

    <string name="still">Still</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="in_vehicle">In vehicle</string>

    <string name="still_text">Still</string>
    <string name="walking_text">Walking</string>
    <string name="running_text">Running</string>
    <string name="in_vehicle_text">In vehicle</string>
    <string name="no_fuel_purchases_available">No fuel purchases available.</string>
    <string name="no_trips_available">No trips available.</string>

</resources>
