<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tripshistory.ViewTripsHistory">

    <Button
        android:id="@+id/buttonAddTripToTheList"
        android:layout_width="119dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:text="@string/add_fuel_purchase_to_the_list"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/decimalDistance"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddTrip"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/decimalDistance"
        android:layout_width="192dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/type_here"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/textViewAddTrip"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddTrip"
        />

    <TextView
        android:id="@+id/textViewAddTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@id/decimalDistance"
        android:text="@string/add_trip_with_current_date"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerViewTripsHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decimalDistance"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewEmpty"
        android:layout_width="120dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:text="@string/no_trips_available"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/RecyclerViewTripsHistory"
        app:layout_constraintEnd_toEndOf="@+id/RecyclerViewTripsHistory"
        app:layout_constraintStart_toStartOf="@+id/RecyclerViewTripsHistory"
        app:layout_constraintTop_toTopOf="@+id/RecyclerViewTripsHistory"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
