<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetFuelConsumption">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.notifications.NotificationsFragment"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="-112dp">

        <Button
            android:id="@+id/buttonSaveCarFuelConsumption"
            android:layout_width="119dp"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:text="@string/save_car_fuel_consumption"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/buttonViewTripsHistory"
            app:layout_constraintStart_toEndOf="@+id/decimalFuelConsumption"
            app:layout_constraintTop_toBottomOf="@+id/textViewFuelConsumption"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/decimalFuelConsumption"
            android:layout_width="192dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/type_here"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@+id/textViewFuelConsumption"
            app:layout_constraintTop_toBottomOf="@+id/textViewFuelConsumption" />

        <TextView
            android:id="@+id/textViewFuelConsumption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@id/decimalFuelConsumption"
            android:text="@string/fuel_consumption"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.128"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>